--- a/about.html
+++ b/about.html
@@ -35,26 +35,26 @@
                 <div class="container">
                     <a href="#" class="branding">
                         <img src="images/angel.png" alt="" class="logo">
-                        <h1 class="site-title">Church of the Passover Angel</h1>
+                        <h1 class="site-title">Kościół Anioła Paschalnego</h1>
                     </a>
 
                     <div class="main-navigation">
                         <button class="menu-toggle"><i class="fa fa-bars"></i> Menu</button>
                         <ul class="menu">
                             <li class="menu-item">
-                                <a href="index.html">Homepage <small>Lorem ipsum</small></a>
+                                <a href="index.html">Strona Główna <small>Start</small></a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="about.html">O Kościele <small>Poznaj nas</small></a>
                             </li>
                             <li class="menu-item current-menu-item">
-                                <a href="about.html">About Us <small>About Our Church</small></a>
+                                <a href="sermons.html">Nauczania <small>Słowo z Góry</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="sermons.html">Sermons <small>Words From On High</small></a>
+                                <a href="book.html">Święte Słowo <small>Pismo Kościoła</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="book.html">The Book <small>Donate Today</small></a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#contact">Contact <small>We Want To Hear From You</small></a>
+                                <a href="#contact">Kontakt <small>Napisz do Nas</small></a>
                             </li>
                         </ul>
                     </div>
@@ -66,27 +66,20 @@
             <main class="main-content">
                 <div class="fullwidth-block">
                     <div class="container text-center">
-                        <h2 class="section-title">About The Church of the Passover Angel</h2>
+                        <h2 class="section-title">O Kościele</h2>
 
                         <div class="row">
                             <div class="col-md-12 col-sm-6">
                                 <div class="news">
-                                    <p>
-                                        We are a small, non-denominational, fundamentalist Church devoted to total submission to the will of God and his herald, the Passover Angel.
-                                    </p>
-                                    <p>
-                                        We believe that the End Times are near. Soon God will return to the world, through his messenger the Passover Angel, in order to cleanse the world of sin and restore righteousness through the Rapture.
+                                    <p>Jesteśmy małym, bezwyznaniowym, fundamentalistycznym Kościołem oddanym całkowitemu poddaniu się woli Boga i jego herolda, Anioła Paschy.
 
-                                    </p>
-                                    <p> 
-                                        Many churches will tell you that the Rapture was foretold by John in the Book of Revelations, but they are deceived. Only those who follow the true words of God's Angel will be redeemed, and so we must all repent if we hope to be saved.
-                                    </p>
-                                    <p>
-                                        Donate to our Church now and receive <a href="book.html"><u>The Book of the Passover Angel</u></a> to learn more.  Redeem yourself now before our Lord, before it is too late!
-                                    </p>
-                                    <p>
-                                        "Boast not thyself of to morrow; for thou knowest not what a day may bring forth." (Proverbs 27:1)
-                                    </p>
+<br><br>Wierzymy, że Czasy Ostateczne są bliskie. Wkrótce Bóg powróci na świat, poprzez swojego posłańca, Anioła Paschy, aby oczyścić świat z grzechu i przywrócić sprawiedliwość poprzez Porwanie.
+
+<br><br>Wiele kościołów powie ci, że Porwanie zostało przepowiedziane przez Jana w Księdze Objawienia, ale są oszukani. Tylko ci, którzy podążają za prawdziwymi słowami Anioła Bożego, zostaną odkupieni, więc wszyscy musimy pokutować, jeśli mamy nadzieję na zbawienie.
+
+<br><br>Przekaż darowiznę na rzecz naszego Kościoła już teraz i otrzymaj Księgę Anioła Paschy, aby dowiedzieć się więcej. Odkup się teraz przed naszym Panem, zanim będzie za późno!
+
+<br><br><i>„Nie chełp się jutrem, bo nie wiesz, co dzień przyniesie”</i> (Księga Przysłów 27:1)</p>
                                 </div>
                             </div>
                         </div> <!-- .row -->
@@ -99,26 +92,25 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="widget">
-                                <h3 class="widget-title">Our address</h3>
-                                <p>There is but one Church in which men find salvation, just as outside the ark of Noah it was not possible for anyone to be saved. (Thomas Aquinas)</p>
+                                <h3 class="widget-title">Nasz Adres</h3>
+                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
                                 <ul class="address">
-                                    <li><i class="fa fa-map-marker"></i> 1313 Mockingbird Ln, Cleveland, OH 44106</li>
-                                    <li><i class="fa fa-phone"></i> (216) 555 0180</li>
-                                    <li><i class="fa fa-envelope"></i> info@passoverangel.com</li>
+                                    <li><i class="fa fa-map-marker"></i> Matemblewska 44B, Gdańsk 80-294, Polska</li>
+                                    <li><i class="fa fa-envelope"></i> kontakt@kosciol.aniolpaschalny.pl</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="widget text-center">
-                                <h2 class="widget-title">Free Gift With Donation!</h2>
+                                <h2 class="widget-title">Otrzymaj Orędzie Pana za skromny datek</h2>
                                 <a href="book.html"><img src="images/book_thumb.png"></a>
-                                <p><strong>$29.95</strong></p>
+                                <p><strong>40.99zł</strong></p>
                                 <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_cc_147x47.png" alt="Donate">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="widget">
-                                <h3 class="widget-title"><a name="contact">Contact form</a></h3>
+                                <h3 class="widget-title"><a name="contact">Formularz kontaktowy</a></h3>
                                 <form action="#" class="contact-form">
                                     <div class="row">
                                         <div class="col-md-6"><input type="text" placeholder="Your name..."></div>
@@ -131,9 +123,7 @@
                         </div>
                     </div> <!-- .row -->
 
-                    <p class="colophon">
-                        Copyright <span class="year-0"></span> Church of the Passover Angel. All right reserved
-                    </p>
+                    <p class="colophon">Copyright <span class="year-0"></span> Kościoł Anioła Paschalnego. All right reserved</p>
                 </div><!-- .container -->
             </footer> <!-- .site-footer -->
         </div>
